# gwo

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  gwo.hpp  gwo_main.cpp  gwo_python.py  setup.py
examples/: CMakeLists.txt  gwo_main.cpp
